# ecoacoustics

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
ecoacoustics/: Ecoacoustics Notebook.ipynb  Ecoacoustics Script.py  conf.py  data_analysis.py  data_processing_vggish.py  process_vggish.py  relay.py
ecoacoustics/manual_confs/: logger_conf.py
ecoacoustics/models/: vggish.py
ecoacoustics/relays/: relay.py
ecoacoustics/transforms/: __init__.py  framing.py  logmelspectrogram.py
external_confs/dm/: vggish-torch.yaml  vggish.yaml
external_confs/hydra/launcher/: slurm_goedel.yaml
hydra_plugins/: ea_plugin.py
prior_work/: data_analysis.py  data_processing_vggish.py  process_vggish.py
tests/: ecoacoustics_test.py  test_ecoacoustics.py
