[tool.poetry]
name = "ecoacoustics"
version = "0.1.0"
description = ""
authors = ["DavidHurst <davidshrst@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipywidgets = "^7.6.5"
conduit = {git = "https://github.com/DavidHurst/palbolts", branch = "ecoacoustics-datamodule"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
