[tool.poetry]
name = "ecoacoustics"
version = "0.1.0"
description = ""
authors = ["DavidHurst <davidshrst@gmail.com>", "Ivor Simpson <i.simpson@sussex.ac.uk>"]

[tool.poetry.dependencies]
python = "3.8"
ipywidgets = "^7.6.5"
conduit = {git = "https://github.com/predictive-analytics-lab/conduit", branch = "main"}
umap-learn = "^0.5.1"
datashader = "^0.13.0"
bokeh = "^2.4.0"
pandas = "^1.3.3"
matplotlib = "^3.4.3"
holoviews = "^1.14.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
